# finetunetabpfn

./: .gitignore  pyproject.toml
data/: Qin_2012.txt  Zhang_2015.txt
src/finetabpfn/: __init__.py  adaptive_early_stopping.py  aes_finetuned_classifier.py  aes_finetuner_classifier.py  finetune.py  setup.py
src/finetabpfn/utils/: general.py  model.py  plot.py  training.py  validation.py
tests/: test_tabpfn_expectations.py
