[project]
name = "finetabpfn"
version = "0.1"
dependencies = [
    "tabpfn==2.1.3",  ##  we set a specific version since we rely on some internals
    "scikit-learn>=1.2.0,<1.7",
    "pandas>=2.2.3",
    "numpy>=2.1.3",
    "torch>=2.6.0"
]


[project.optional-dependencies]
dev = ["pytest"]


[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"